# cmpe-275-mini-proj1

./: README.md
Code/mini.proj.c/: CMakeLists.txt  Readme.md
Code/mini.proj.c/include/: Client.hpp  Server.hpp  SessionHandler.hpp
Code/mini.proj.c/messages/: Messages.hpp
Code/mini.proj.c/src/: Client.cpp  Server.cpp  SessionHandler.cpp  main_client.cpp  main_server.cpp
Code/mini.proj.c/test/: test_client.cpp  test_server.cpp
Code/mini.proj.java/: Readme.md  pom.xml
Code/mini.proj.java/src/main/java/app/: ClientApp.java  ServerApp.java  TestClient.java
Code/mini.proj.java/src/main/java/payload/: BasicBuilder.java  Message.java
Code/mini.proj.java/src/main/java/socket/: BasicClient.java  BasicServer.java  SessionHandler.java
Code/mini.proj.java/src/test/java/payload/: BasicBuilderTest.java
Code/mini.proj.java/src/test/java/socket/: BasicServerClientTest.java
Code/mini.proj.python/: Readme.md
Code/mini.proj.python/client/: client.py
Code/mini.proj.python/common/: message.py
Code/mini.proj.python/server/: server.py
Code/mini.proj.python/tests/: test_client.py  test_message.py  test_server.py
